# goit-algo2-hw-03

./: README.md  pyproject.toml  task_01.ipynb  task_02.ipynb
