[tool.poetry]
name = "goit-algo2-hw-03"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
btrees = "^6.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
